# hasura-permission-checker

./: .gitignore  README.md  graph.py  hasura.py  pyproject.toml  testing.ipynb
hasura_permission_checker/: graph.py  hasura.py
metadata/: graph.json  graph.json.bkp
